# Grafo

./: .cproject  .project  CMakeCache.txt  CMakeLists.txt  Edge.cpp  Edge.h  Edge.sublime-workspace  Graph.cpp  Graph.h  Heuristics.cpp  Heuristics.h  Makefile  Node.cpp  Node.h  cmake_install.cmake  example.txt  graph3.cpp  listEdge.txt  listNode.txt  main.cpp
data/: Graphs.rar
preProcessed/: 1000points.data
preprocessed/: 10000points.data
